--- a/res/layout/aboutview.xml
+++ b/res/layout/aboutview.xml
@@ -3,45 +3,132 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-
-		<TextView android:text="Version: "
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:paddingTop="15px"
-			android:paddingLeft="15px"
-			android:textStyle="bold"
-			android:textColor="#ffffff" />
-		<TextView android:text="0.9.1-pre1"
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:paddingLeft="15px"		
-			android:layout_gravity="center_vertical"
-			android:textColor="#ffffff" />	
-		<TextView android:text="Project-Home: "
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"		
-			android:paddingTop="15px"
-			android:paddingLeft="15px"
-			android:textStyle="bold"
-			android:textColor="#ffffff" />
-		<TextView android:text="http://android-wifi-tether.googlecode.com"
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:autoLink="web"
-			android:textColorLink="#ffffff"
-			android:paddingLeft="15px"
-			android:textSize="12sp"					
-			android:textColor="#ffffff" />				
-		<TextView android:text="Authors: "
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"		
-			android:paddingTop="15px"
-			android:paddingLeft="15px"
-			android:textStyle="bold"
-			android:textColor="#ffffff" />	
-		<TextView android:text="Harald Müller, Seth Lemons"
-			android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-			android:paddingLeft="15px"								
-			android:textColor="#ffffff" />	
+	<ScrollView android:id="@+id/aboutscrollview" 
+		android:orientation="vertical"
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent">    
+		<LinearLayout
+		    android:orientation="vertical"
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent">
+			<TextView android:text="Version: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />
+			<TextView android:text="0.9.1-pre1"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingLeft="15px"		
+				android:layout_gravity="center_vertical"
+				android:textColor="#ffffff" />	
+			<TextView android:text="Project-Home: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"		
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />
+			<TextView android:text="http://android-wifi-tether.googlecode.com"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />
+			<TextView android:text="License: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />	
+			<TextView android:text="GNU Lesser General Public License"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingLeft="15px"								
+				android:textColor="#ffffff" />	
+			<TextView android:text="http://www.gnu.org/licenses/lgpl.html"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />				
+			<TextView android:text="Authors: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"		
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />	
+			<TextView android:text="Harald Müller, Seth Lemons"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingLeft="15px"								
+				android:textColor="#ffffff" />
+			<TextView android:text="Contributors: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"		
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />	
+			<TextView android:text="parrothd, zodiac"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:paddingLeft="15px"								
+				android:textColor="#ffffff" />
+			<TextView android:text="3rd-Party-Software: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"		
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />	
+			<TextView android:text="http://www.iptables.org"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />				
+			<TextView android:text="http://thekelleys.org.uk/dnsmasq/doc.html"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />	
+			<TextView android:text="Iconsets: "
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"		
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:textStyle="bold"
+				android:textColor="#ffffff" />
+			<TextView android:text="http://deviantdark.deviantart.com/art/Oxygen-Refit-70199755"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />					
+			<TextView android:text="http://www.kde-look.org/content/show.php/KDE4+Crystal+Diamond+Icons?content=92163"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:autoLink="web"
+				android:textColorLink="#ffffff"
+				android:paddingLeft="15px"
+				android:textSize="12sp"					
+				android:textColor="#ffffff" />													
+			</LinearLayout>
+		</ScrollView>			
 </LinearLayout>
