--- a/res/layout/aboutview.xml
+++ b/res/layout/aboutview.xml
@@ -18,7 +18,7 @@
 				android:paddingLeft="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />
-			<TextView android:text="0.9.1-pre6"
+			<TextView android:text="0.9.1"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
 				android:paddingLeft="15px"		
@@ -106,7 +106,7 @@
 				android:paddingLeft="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />	
-			<TextView android:text="Iconsets: "
+			<TextView android:text="Iconset: "
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"		
 				android:paddingTop="15px"
