Added ability to disable Auto-Sync of mail, calendar, and contacts while tethered. Also, fixed a bug that would cause program to lose pre-tether wifi state if the program was exited and re-entered.

--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -41,6 +41,13 @@
 						android:textColor="#000000" />
 				</TableRow>
 		</TableLayout>
+		
+		<CheckBox android:id="@+id/sync"
+			android:text="Disable Auto-Sync"
+			android:textStyle="bold"
+			android:textColor="#ffffff"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" />
 
 		<CheckBox android:id="@+id/checkBoxAccess"
 			android:text="Activate Access-Control"
