Added wifi-powermode configuration.

--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -15,6 +15,13 @@
 			android:entries="@array/channelnames"  
 			android:entryValues="@array/channelvalues"  
 			android:dialogTitle="New Channel:" /> 
+		<ListPreference  
+			android:key="powermodepref"  
+			android:title="Change Powermode:"  
+			android:summary="Click to pop up a list to choose from"  
+			android:entries="@array/powermodenames"  
+			android:entryValues="@array/powermodevalues"  
+			android:dialogTitle="New Channel:" /> 			
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Phone">
 		 <CheckBoxPreference  
