--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -5,29 +5,29 @@
 		<EditTextPreference  
 			android:key="ssidpref"  
 			android:title="Change SSID:"  
-			android:summary="Click to pop up a field for entry"  
-			android:dialogTitle="New SSID:"  
+			android:summary="Network name"  
+			android:dialogTitle="Enter SSID:"  
 		/>      
 		<ListPreference  
 			android:key="channelpref"  
 			android:title="Change Channel:"  
-			android:summary="Click to pop up a list to choose from"  
+			android:summary="Wireless frequency channel"  
 			android:entries="@array/channelnames"  
 			android:entryValues="@array/channelvalues"  
-			android:dialogTitle="New Channel:" /> 
+			android:dialogTitle="Select Channel:" /> 
 		<ListPreference  
 			android:key="powermodepref"  
-			android:title="Change Powermode:"  
-			android:summary="Click to pop up a list to choose from"  
+			android:title="Change Power Mode:"  
+			android:summary="Wifi power settings"  
 			android:entries="@array/powermodenames"  
 			android:entryValues="@array/powermodevalues"  
-			android:dialogTitle="New Powermode:" /> 			
+			android:dialogTitle="Select Power Mode:" /> 			
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Phone">
 		 <CheckBoxPreference  
 			android:key="syncpref"  
 			android:title="Disable Auto-Sync"  
-			android:summary="Check it on, check it off" />  
+			android:summary="Turn off auto-sync while tethering" />  
 	</PreferenceCategory>
 </PreferenceScreen>  
 <!-- 
