New parameter in android-manifest file to start application as a "singleTask" (not starting new acitivities if the notification is pressed) android:launchMode="singleTask". Added wakeLock (SCREEN_DIM_WAKE_LOCK) which can be disabled in settings (restart required).

--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -27,7 +27,11 @@
 		 <CheckBoxPreference  
 			android:key="syncpref"  
 			android:title="Disable Auto-Sync"  
-			android:summary="Turn off auto-sync while tethering" />  
+			android:summary="Turn off auto-sync while tethering" /> 
+		 <CheckBoxPreference  
+			android:key="wakelockpref"  
+			android:title="Disable Wake-Lock"  
+			android:summary="Turn off wake-lock while tethering" />  			 
 	</PreferenceCategory>
 </PreferenceScreen>  
 <!-- 
