Added ability for user to change ringtone used for notifications and added a default notification mode.

--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -30,11 +30,19 @@
 			android:summary="Client Notification Mode settings"  
 			android:entries="@array/notificationmodenames"  
 			android:entryValues="@array/notificationmodevalues"  
+			android:defaultValue="2"
 			android:dialogTitle="Select Client Notification Mode" /> 		
+		 <RingtonePreference  
+			android:key="notifyring"  
+			android:title="Notification Ringtone"  
+			android:showSilent="true"
+			android:showDefault="true"
+			android:ringtoneType="notification"
+			android:summary="Ringtone to use with notifications" /> 		
 		 <CheckBoxPreference  
 			android:key="syncpref"  
 			android:title="Disable Auto-Sync"  
-			android:summary="Turn off auto-sync while tethering" /> 
+			android:summary="Turn off auto-sync while tethering" /> 	
 		 <CheckBoxPreference  
 			android:key="wakelockpref"  
 			android:title="Disable Wake-Lock"  
