Rewrite client-update in access-control-list.

--- a/res/layout/accesscontrolview.xml
+++ b/res/layout/accesscontrolview.xml
@@ -29,16 +29,16 @@
 	              android:layout_weight="1"
 	              android:paddingBottom="10px"
 	              android:drawSelectorOnTop="false"/>	
-
+		<!-- 
 		<TextView android:layout_width="fill_parent" 
 	        android:layout_height="wrap_content"
 	        android:minHeight="45px"
-			android:text=" " />
+			android:text=" " /> -->
 
 	</LinearLayout>
 		
 
-			
+	<!-- 		
 	<ImageButton android:id="@+id/ImgBtnRefresh"
 		android:src="@drawable/refresh" 
 		android:layout_width="150px"
@@ -54,5 +54,6 @@
 		android:layout_marginRight="0px"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentRight="true" />
+		-->
 
 </RelativeLayout>
