--- a/res/layout/accesscontrolview.xml
+++ b/res/layout/accesscontrolview.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android">
-
-	<LinearLayout
-	    android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent">
-
-		<CheckBox android:id="@+id/checkBoxAccess"
-			android:text="Activate Access-Control"
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+	<RelativeLayout android:id="@+id/layoutHeaderACEnabled"
+		android:layout_width="fill_parent"
+		android:layout_height="50px"
+		android:layout_gravity="center_horizontal"
+		android:background="#FF909090">
+		<TextView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="fill_parent"
+			android:text="Access-Control is enabled."
+			android:layout_marginLeft="10px"
+			android:layout_marginTop="15px"
+			android:layout_alignParentTop="true"
+			android:layout_alignParentLeft="true"
 			android:textStyle="bold"
-			android:textColor="#ffffff"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" />
-
-		<TextView android:id="@+id/allowedClientsText"
-	        android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-			android:text="Allowed Clients:"
+			android:textColor="#ffffff" />
+		<Button android:id="@+id/buttonACDisable"
+		    android:layout_width="80px"
+		    android:layout_height="fill_parent"
+			android:layout_marginRight="0px"
+			android:layout_alignParentTop="true"
+			android:layout_alignParentRight="true"
+		    android:text="Disable" />			    
+	</RelativeLayout>
+	<RelativeLayout android:id="@+id/layoutHeaderACDisabled"
+		android:layout_width="fill_parent"
+		android:layout_height="50px"
+		android:layout_gravity="center_horizontal"
+		android:background="#FF909090">
+		<TextView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="fill_parent"
+			android:text="Access-Control is disabled."
+			android:layout_marginLeft="10px"
+			android:layout_marginTop="15px"
+			android:layout_alignParentTop="true"
+			android:layout_alignParentLeft="true"
 			android:textStyle="bold"
-			android:textColor="#ffffff" />	
-
-	    <ListView android:id="@id/android:list"
-	              android:layout_width="fill_parent" 
-	              android:layout_height="fill_parent"
-	              android:layout_weight="1"
-	              android:paddingBottom="10px"
-	              android:drawSelectorOnTop="false"/>	
-		<!-- 
-		<TextView android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-	        android:minHeight="45px"
-			android:text=" " /> -->
-
-	</LinearLayout>
-		
-
-	<!-- 		
-	<ImageButton android:id="@+id/ImgBtnRefresh"
-		android:src="@drawable/refresh" 
-		android:layout_width="150px"
-		android:layout_height="wrap_content" 
-		android:layout_marginLeft="0px"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentLeft="true" />
-		
-	<ImageButton android:id="@+id/ImgBtnSave"
-		android:src="@drawable/save" 
-		android:layout_width="150px"
-		android:layout_height="wrap_content" 
-		android:layout_marginRight="0px"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true" />
-		-->
-
-</RelativeLayout>
+			android:textColor="#ffffff" />
+		<Button android:id="@+id/buttonACEnable"
+		    android:layout_width="80px"
+		    android:layout_height="fill_parent"
+			android:layout_marginRight="0px"
+			android:layout_alignParentTop="true"
+			android:layout_alignParentRight="true"
+		    android:text="Enable" />			    
+	</RelativeLayout>	
+	<TextView android:id="@+id/allowedClientsText"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content"
+		android:text="Allowed Clients:"
+		android:layout_marginTop="20px"
+		android:layout_marginLeft="10px"
+		android:textStyle="bold"
+		android:textColor="#ffffff" />	
+    <ListView android:id="@id/android:list"
+              android:layout_width="fill_parent" 
+              android:layout_height="fill_parent"
+              android:layout_marginLeft="10px"
+              android:layout_weight="1"
+              android:paddingBottom="10px"
+              android:drawSelectorOnTop="false"/>	
+</LinearLayout>
