--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen  
     xmlns:android="http://schemas.android.com/apk/res/android">  
+	<PreferenceCategory android:title="Security">
+		<CheckBoxPreference  
+			android:key="acpref"  
+			android:title="Enable Access-Control"  
+			android:summary="Turn on access-control" /> 	
+	</PreferenceCategory>
 	<PreferenceCategory android:title="Wifi">
 		<EditTextPreference  
 			android:key="ssidpref"  
