--- a/res/layout/logview.xml
+++ b/res/layout/logview.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-	android:id="@+id/logview"
+	android:id="@+id/layoutLog"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<WebView android:id="@+id/appView"
+	<WebView android:id="@+id/webviewLog"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent" 
 		android:layout_alignParentTop="true">
