--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -6,11 +6,12 @@
 			android:key="encpref"  
 			android:title="Enable WiFi-Encryption"  
 			android:summary="Turn on wifi-encrytion (WEP 128-bit)" /> 	
-		<EditTextPreference  
+		<EditTextPreference
 			android:key="passphrasepref"  
 			android:title="Change Passphrase"  
-			android:summary="Change Passphrase for WiFi-Encryption"  
+			android:summary="Change Passphrase for WiFi-Encryption" 
 			android:dialogTitle="Enter Passphrase" 
+			android:dialogMessage="WEP-key must be 13 characters (ASCII) long!"
 			android:maxLength="13" 
 			android:defaultValue="abcdefghijklm"
 		/>  			
