--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -66,6 +66,10 @@
 			android:ringtoneType="notification"
 			android:summary="Ringtone to use with notifications" /> 		
 		 <CheckBoxPreference  
+			android:key="updatepref"  
+			android:title="Disable Update-Check"  
+			android:summary="Turn off update-check at startup" /> 	
+		 <CheckBoxPreference  
 			android:key="syncpref"  
 			android:title="Disable Auto-Sync"  
 			android:summary="Turn off auto-sync while tethering" /> 	
