Back-in-black - version 1.70-pre1

--- a/res/layout/accesscontrolview.xml
+++ b/res/layout/accesscontrolview.xml
@@ -5,52 +5,31 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/background">
-	<RelativeLayout android:id="@+id/layoutHeaderACEnabled"
+	<RelativeLayout android:id="@+id/layoutHeaderAC"
 		android:layout_width="fill_parent"
-		android:layout_height="50px"
+		android:layout_height="45px"
 		android:layout_gravity="center_horizontal"
 		android:background="#FF909090">
-		<TextView 
+		<TextView android:id="@+id/statusAC"
 		    android:layout_width="wrap_content"
 		    android:layout_height="fill_parent"
-			android:text="Access-Control is enabled."
+			android:text=""
 			android:layout_marginLeft="10px"
 			android:layout_marginTop="15px"
 			android:layout_alignParentTop="true"
 			android:layout_alignParentLeft="true"
 			android:textStyle="bold"
 			android:textColor="#ffffff" />
-		<Button android:id="@+id/buttonACDisable"
+		<ToggleButton android:id="@+id/buttonAC"
 		    android:layout_width="80px"
 		    android:layout_height="fill_parent"
 			android:layout_marginRight="0px"
+			android:layout_marginTop="4px"
 			android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
-		    android:text="Disable" />			    
+			android:textOn="Disable" 
+			android:textOff="Enable" />			    
 	</RelativeLayout>
-	<RelativeLayout android:id="@+id/layoutHeaderACDisabled"
-		android:layout_width="fill_parent"
-		android:layout_height="50px"
-		android:layout_gravity="center_horizontal"
-		android:background="#FF909090">
-		<TextView 
-		    android:layout_width="wrap_content"
-		    android:layout_height="fill_parent"
-			android:text="Access-Control is disabled."
-			android:layout_marginLeft="10px"
-			android:layout_marginTop="15px"
-			android:layout_alignParentTop="true"
-			android:layout_alignParentLeft="true"
-			android:textStyle="bold"
-			android:textColor="#ffffff" />
-		<Button android:id="@+id/buttonACEnable"
-		    android:layout_width="80px"
-		    android:layout_height="fill_parent"
-			android:layout_marginRight="0px"
-			android:layout_alignParentTop="true"
-			android:layout_alignParentRight="true"
-		    android:text="Enable" />			    
-	</RelativeLayout>	
 	<TextView android:id="@+id/connectedClientsText"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
@@ -59,15 +38,10 @@
 		android:layout_marginBottom="5px"
 		android:layout_marginLeft="10px"
 		android:textStyle="bold"
-		android:textColor="#FF616161"
-		android:shadowColor = "#FFFFFFFF"
-    	android:shadowDx="0.8"
-    	android:shadowDy="0.8"
-    	android:shadowRadius="0.1" />	
+		android:textColor="#FFFFFFFF" />	
     <ListView android:id="@id/android:list"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
-        android:layout_marginLeft="10px"
         android:layout_weight="1"
         android:paddingBottom="10px"
         android:drawSelectorOnTop="false"/>	
