More flexible update handling.

--- a/res/layout/updateview.xml
+++ b/res/layout/updateview.xml
@@ -20,7 +20,19 @@
 				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />
+			<TextView android:text=""
+				android:id="@+id/updateMessage"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content"
+				android:layout_centerVertical="true"
+				android:paddingTop="15px"
+				android:paddingLeft="15px"
+				android:paddingRight="15px"
+				android:textStyle="bold"
+				android:autoLink="web"
+				android:textColor="#ffffaa" />	
 			<TextView android:text="Do you want to install this update now?"
+				android:id="@+id/updateNowText"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
 				android:layout_centerVertical="true"
